<resources>
    <string name="app_name">ProjectStem</string>
    <string name="title_library">Library</string>
    <string name="title_games">Games</string>
    <string name="title_home">Home</string>
    <string name="title_translate">Translator</string>
    <string name="title_user">User Settings</string>
    <string name="translate_from">Translate</string>
    <string name="translation">Translation</string>
    <string name="translate">translate</string>
    <string name="title_listOfWords">Library</string>
    <string name="search_icon">Search</string>
    <string name="word_translation">RU | EN</string>
    <string name="word_knowledge">Knowledge</string>
    <string name="flag_icon">Flag icon</string>
    <string name="knowledge_icon">Knowledge dot</string>
    <string name="submit">Submit</string>
    <string name="img_placeholder">Image</string>
    <string name="finish">FINISH</string>
    <string name="result_result">Result</string>
    <string name="result_img">Trophy image</string>
    <string name="Result_congrats">Hey, Congratulations</string>



    <string name="English">English</string>
    <string name="Chinese">Chinese</string>
    <string name="German">German</string>
    <string name="French">French</string>
    <string name="Russian">Russian</string>
    <string name="Add">Add</string>
    <string name="Flag">Flag</string>
    <string name="FlashCards">Flash Cards</string>
    <string name="Multimatch">Multimatch</string>
    <string name="Hangman">Hangman</string>
    <string name="Guess">Guess</string>


    <string-array name="lCategory">
        <item>Afrikaans</item>
        <item>Arabic</item>
        <item>Azerbaijani</item>
        <item>Belarusian</item>
        <item>Bulgarian</item>
        <item>Bengali</item>
        <item>Bosnian</item>
        <item>Catalan</item>
        <item>Czech</item>
        <item>Welsh</item>
        <item>Danish</item>
        <item>German</item>
        <item>Greek</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>Spanish</item>
        <item>Estonian</item>
        <item>Persian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Irish</item>
        <item>Galician</item>
        <item>Gujarati</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Croatian</item>
        <item>Haitian</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Georgian</item>
        <item>Kannada</item>
        <item>Korean</item>
        <item>Lithuanian</item>
        <item>Latvian</item>
        <item>Macedonian</item>
        <item>Malayalam</item>
        <item>Mongolian</item>
        <item>Marathi</item>
        <item>Malay</item>
        <item>Maltese</item>
        <item>Dutch</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Sindhi</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Albanian</item>
        <item>Serbian</item>
        <item>Swedish</item>
        <item>Swahili</item>
        <item>Tamil</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uzbek</item>
        <item>Vietnamese</item>
        <item>Chinese</item>
    </string-array>

    <string-array name="CategoryListOfWords">
        <item name="word">корова | cow</item>
        <item name="word">Кот | cat</item>
        <item name="word">собака | dog</item>
        <item name="word">буйвол | buffalo</item>
        <item name="word">змея | snake</item>
        <item name="word">паук | spider</item>
        <item name="word">корова | cow</item>
        <item name="word">Кот | cat</item>
        <item name="word">собака | dog</item>
        <item name="word">буйвол | buffalo</item>
        <item name="word">змея | snake</item>
        <item name="word">паук | spider</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="multimatch">Multimatch</string>
    <string name="polyglots_hangman">Hangman</string>
    <string name="guess_the_meaning">Guess the meaning</string>
    <string name="welcome_to_stem">Welcome to Stem!</string>
    <string name="personalize_your_library">Personalize your library</string>
    <string name="test_your_skills_in_the_games">Test your skills in the games</string>
    <string name="here_is_how_it_works">Here is how it works:</string>
    <string name="enjoy_the_app_and_drink_water">Enjoy the app and drink water!</string>
    <string name="translate_unknown_words_on_the_spot">Translate unknown words on the spot</string>
    <string name="add_new_languages_to_learn">Add new languages to learn</string>
    <string name="create_edit_and_study_notes">Create, edit and study notes</string>
    <string name="watch_your_knowledge_improve">Watch your knowledge improve</string>
    <string name="todo">TODO</string>
    <string name="introduction_header">Introduction header</string>
    <string name="todo2">TODO</string>
    <string name="edit_icon">edit_icon</string>
    <string name="games_icon">games_icon</string>
    <string name="translate_icon">translate_icon</string>
    <string name="library_icon">library_icon</string>
    <string name="welcomeToStemBackground" />
    <string name="line" />
    <string name="welcomeheader">welcomeHeader</string>
    <string name="stem_intro">stem intro</string>


    <string name="Translate_from">Translate from</string>
    <string name="Translate_to">Translate to</string>
    <string name="groupItem_origin">Origin</string>
    <string name="groupItem_translated">Translated</string>
    <string name="level_two">2</string>
    <string name="level_three">/ 3</string>
</resources>