<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="121dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/WelcomeHeader"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/welcomeheader"
            android:gravity="center"
            android:src="@drawable/rectangle_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/welcome_to_stem"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/WelcomeHeader" />

        <TextView
            android:id="@+id/welcomeSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/here_is_how_it_works"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/translateIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/translate_icon"
                app:srcCompat="@drawable/ic_baseline_textsms_24" />

            <TextView
                android:id="@+id/translateDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_unknown_words_on_the_spot"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/flagIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/flag_icon"
                app:srcCompat="@drawable/ic_flag1" />

            <TextView
                android:id="@+id/languageDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_languages_to_learn"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <ImageView
                android:id="@+id/gamesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/games_icon"
                app:srcCompat="@drawable/ic_baseline_videogame_asset_24" />

            <TextView
                android:id="@+id/gameDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_your_skills_in_the_games"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/pencilIcon"
                android:layout_width="24dp"
                android:layout_height="23dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/edit_icon"
                app:srcCompat="@drawable/pencil" />

            <TextView
                android:id="@+id/noteDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_edit_and_study_notes"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:layout_editor_absoluteX="-16dp">

            <ImageView
                android:id="@+id/knowledgeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/knowledge_icon"
                app:srcCompat="@drawable/ic_knowledge_dot" />

            <TextView
                android:id="@+id/knowledgeDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watch_your_knowledge_improve"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/libraryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/library_icon"
                app:srcCompat="@drawable/ic_baseline_library_books_24" />

            <TextView
                android:id="@+id/libraryDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalize_your_library"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/enjoyMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"

            android:text="@string/enjoy_the_app_and_drink_water"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:srcCompat="@drawable/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>