<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="12sp"
        app:cardCornerRadius="12sp"
        app:cardElevation="6sp">

        <LinearLayout
            android:id="@+id/something"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16sp">

            <ImageView
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:contentDescription="@string/Flag"
                android:src="@drawable/simpleflag"/>

            <TextView
                android:id="@+id/tvPrimaryLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:text="@string/English"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvSecondaryLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12sp"
                android:text="@string/German"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tvGroupId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="10sp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>